[package]
name = "eddie_crawler"
version = "1.0.0"
authors = ["EddieTheCubeHead <eetu.asikainen1204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3.14"
mediawiki = "0.2.7"